# aws-policies-analyzer

./: .gitignore  README.md  analyze.py  flake.nix  justfile  pyproject.toml
src/aws_policies_analyzer/: __init__.py  cli.py
tests/: test_analyze.py
