[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-policies-analyzer"
version = "0.1.0"
description = "Tool for analyzing AWS IAM policies"
readme = "README.md"
authors = [
    {name = "Bruno Adelé", email = "bruno.adele@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "boto3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "pytest-xdist",
    "black",
    "isort",
    "mypy",
    "flake8",
]

[project.urls]
"Homepage" = "https://github.com/badele/aws-policies-analyzer"
"Bug Tracker" = "https://github.com/badele/aws-policies-analyzer/issues"

[project.scripts]
aws_policies_analyzer = "aws_policies_analyzer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["aws_policies_analyzer"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-xvs --cov=aws_policies_analyzer --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

